# r2proximity-chat

./: .gitignore  Cargo.toml  README.md  build.rs
manifest/: manifest.json
src/: bindings.rs  client.rs  comms.rs  connect_hook.rs  discord_client.rs  lib.rs  server.rs  shared.rs  window.rs
src/server/: comms.rs  server.rs  terminal.rs  utils.rs  window.rs
src/window/: mod.rs
src/window_backup/: app.rs  mod.rs  state.rs
src/window_backup2/: app.rs  backend.rs  mod.rs
src/window_backup2/render/: build_gui.rs  lib.rs  mod.rs  render_target.rs  txt.txt
src/window_backup3/: mod.rs
src/window_backup4/: mod.rs
src/window_backup4/client/: mod.rs
