[package]
name = "r2plugins-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = { version = "0.1.0", optional = true }
env_logger = "0.9.3"
futures = "0.3.25"
egui-winit = "0.19.0"

[dependencies.eframe]
# path = "egui/crates/eframe"
# version = "0.19.0"
git = "https://github.com/catornot/egui.git"
default-features = false
features = ["wgpu","default_fonts"]

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]

[features]
default = ["rrplug"]

[[bin]]
name = "server"
path = "src/server/server.rs"
required-features = []