[package]
name = "r2proxi-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = { git = "https://github.com/catornot/rrplug.git" }
log = "0.4.17"
futures = "0.3.25"
egui-winit = "0.20.1"
once_cell = "1.16.0"
discord_game_sdk = "1.0.1"


[dependencies.eframe]
# path = "egui/crates/eframe"
# version = "0.19.0"
git = "https://github.com/catornot/egui.git"
default-features = false
features = ["wgpu","default_fonts"]

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]