[package]
name = "r2proxi-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = { git = "https://github.com/catornot/rrplug.git" }
log = "0.4.17"
futures = "0.3.25"
egui-winit = "0.22.0"
once_cell = "1.16.0"
parking_lot = "0.12.1"
cpal = "0.15.2"
bincode = "1.3.3"
serde = { version = "1.0.179", features = ["derive"] }
serde-big-array = "0.5.1"
thiserror = "1.0.44"
fundsp = "0.15.0"

[dependencies.eframe]
version = "0.22.0"
default-features = false
features = ["wgpu","default_fonts"]

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]
